Add feature specs

--- a/source/app/views/transactions/_group.html.erb
+++ b/source/app/views/transactions/_group.html.erb
@@ -3,11 +3,9 @@
 <table>
   <thead>
     <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
       <th>Customer</th>
+      <th>Amount</th>
+      <th>Updated At</th>
     </tr>
   </thead>
 
