--- a/source/app/views/transactions/_transaction_row.html.erb
+++ b/source/app/views/transactions/_transaction_row.html.erb
@@ -1,7 +1,5 @@
 <tr class="transaction <%= transaction.status %>">
-    <td><%= transaction.paid %></td>
-    <td><%= transaction.amount %></td>
-    <td><%= transaction.currency %></td>
-    <td><%= transaction.refunded %></td>
     <td><%= transaction.customer.full_name %></td>
+    <td><%= transaction.amount %></td>
+    <td><%= transaction.updated_at %></td>
 </tr>
