Charges view finished

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,19 @@
  .top-container {
    padding-bottom: 40px;
  }
+
+ .card.charge {
+   margin-top: 20px;
+ }
+
+ .charges.charge-items {
+   margin-top: 20px;
+ }
+
+ .items-failed {
+  background-color: #FF0000;
+ }
+
+ .items-disputed {
+  background-color: #FF5400;
+ }
