--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
   </head>
   <body>
     <header>
-      <div class="jumbotron">
+      <%# <div class="jumbotron">
         <p>Test application</p>
-      </div>
+      </div> %>
     </header>
     <main role="main">
        <%= render 'layouts/messages' %>
