--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,37 +1,32 @@
-<p id="notice"><%= notice %></p>
+<section class="list">
+  <h1>Failed Charges</h1>
+  <%- failed.each do |charge| %>
+    <ul class="charge failed">
+      <li><%= charge.customer.name %></li>
+      <li><%= charge.formatted_amount %></li>
+      <li><%= charge.date %></li>
+    </ul>
+  <% end %>
+</section>
 
-<h1>Listing Charges</h1>
+<section class="list">
+  <h1>Disputed Charges</h1>
+  <%- disputed.each do |charge| %>
+    <ul class="charge disputed">
+      <li><%= charge.customer.name %></li>
+      <li><%= charge.formatted_amount %></li>
+      <li><%= charge.date %></li>
+    </ul>
+  <% end %>
+</section>
 
-<table>
-  <thead>
-    <tr>
-      <th>Created</th>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.created %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<section class="list">
+  <h1>Successful Charges</h1>
+  <%- successful.each do |charge| %>
+    <ul class="charge successful">
+      <li><%= charge.customer.name %></li>
+      <li><%= charge.formatted_amount %></li>
+      <li><%= charge.date %></li>
+    </ul>
+  <% end %>
+</section>
