--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.failed tbody tr{
+    background-color: #FF0000;
+}
+.disputed tbody tr{
+    background-color: #FF5400;
+}
