--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,35 +1,20 @@
 <p id="notice"><%= notice %></p>
+<section>
+  <h1>Failed Charges</h1>
+  <%= render 'table', charges: @charges.failed, klass: 'failed' %>
+  <br>
+</section>
 
-<h1>Charges</h1>
+<section>
+  <h1>Disputed Charges</h1>
+  <%= render 'table', charges: @charges.disputed, klass: 'disputed' %>
+  <br>
+</section>
 
-<table>
-  <thead>
-    <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer_id %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<section>
+  <h1>Successful Charges</h1>
+  <%= render 'table', charges: @charges.successful %>
+  <br>
+</section>
 
 <%= link_to 'New Charge', new_charge_path %>
