--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -13,7 +13,7 @@
 
 <section>
   <h1>Successful Charges</h1>
-  <%= render 'table', charges: @charges.successful %>
+  <%= render 'table', charges: @charges.successful, klass: 'successful' %>
   <br>
 </section>
 
