--- a/source/app/assets/stylesheets/charges.scss
+++ b/source/app/assets/stylesheets/charges.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.failed {
+  background-color: #FF0000;
+}
+
+.disputed {
+  background-color: #FF5400;
+
+  ul {
+    border-color: white;
+  }
+}
