Add feature specs

--- a/source/app/assets/stylesheets/charges.scss
+++ b/source/app/assets/stylesheets/charges.scss
@@ -2,11 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.failed {
+.section-failed {
   background-color: #FF0000;
 }
 
-.disputed {
+.section-disputed {
   background-color: #FF5400;
 
   ul {
