--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,32 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Charges</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<br>
+<hr>
+<br>
+<%= render 'charge', charges: @failed, title: 'Failed Charges', bg_color: '#FF0000' %>
+<%= render 'charge', charges: @disputed, title: 'Disputed Charges', bg_color: '#FF5400' %>
+<%= render 'charge', charges: @successful, title: 'Successful Charges', bg_color: '' %> 
 
 <br>
 
