--- a/app/views/charges/_charge.html.erb
+++ b/app/views/charges/_charge.html.erb
@@ -15,7 +15,7 @@
         <tr>
           <td><%= charge.customer.full_name %></td>
           <td><%= in_usd(charge.amount) %></td>
-          <td><%= charge.created_at.strftime('%Y-%m-%d') %></td>
+          <td><%= charge.created.strftime('%Y-%m-%d') %></td>
         </tr>
       <% end %>
     <% end %>
