--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,35 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Charges</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Paid</th>
-      <th>Price</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.customer %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.price %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<h1>Credit card charges</h1>
+<div class="list-group">
+  <%= render 'list', charges: @failed,      charge_type: :failed if @failed.present? %>
+  <%= render 'list', charges: @disputed,    charge_type: :disputed if @disputed.present? %>
+  <%= render 'list', charges: @successful,  charge_type: :successful if @successful.present? %>
+</div>
