--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,31 +1,6 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Charges</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Amount</th>
-      <th>Date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.customer.name %></td>
-        <td><%= charge.amount %></td>
-        <td><%= Time.at(charge.created).utc.to_datetime %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<div class="container">
+  <%= render partial: 'charges', locals: { title: 'Failed', charges: @charges.failed } %>
+  <%= render partial: 'charges', locals: { title: 'Disputed', charges: @charges.disputed } %>
+  <%= render partial: 'charges', locals: { title: 'Successful', charges: @charges.successful } %>
+<div>
