--- a/source/app/views/charges/_charges.html.erb
+++ b/source/app/views/charges/_charges.html.erb
@@ -3,7 +3,7 @@
   <table class="table <%= title.downcase %>">
     <thead>
       <tr>
-        <th>Customer</th>
+        <th>Customer Name</th>
         <th>Amount</th>
         <th>Date</th>
       </tr>
