--- a/source/app/views/layouts/application.html.erb
+++ b/source/app/views/layouts/application.html.erb
@@ -7,7 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
+  <header class="navbar  navbar-inverse">
+    <div class="navbar-class">
+      <div class="container">
+        <ul class="nav navbar-nav">
+          <li><%=link_to "Customers", customers_path %></li>
+          <li><%=link_to "Charges", charges_path %></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 <%= yield %>
 
 </body>
