--- a/src/app/views/charges/_list.html.erb
+++ b/src/app/views/charges/_list.html.erb
@@ -1,10 +1,12 @@
-<h1><%= title %></h1>
-<ul>
-  <% data.each do |item| %>
-    <li style="<%= style %>">
-      <%= item.customer.name %>, <%= item.amount / 100.0 %>
-      <%= item.currency %>
-      <%= item.created_at.strftime('%m/%d/%Y at %I:%M%p') %>
-    </li>
-  <% end %>
-</ul>
+<div class="list">
+  <h1><%= title %></h1>
+  <ul>
+    <% data.each do |item| %>
+      <li class="item state-<%= item.state %>">
+        <%= item.customer.name %>, <%= item.amount / 100.0 %>
+        <%= item.currency %>
+        <%= item.created_at.strftime('%m/%d/%Y at %I:%M%p') %>
+      </li>
+    <% end %>
+  </ul>
+</div>
