--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,30 +1,23 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Charges</h1>
+<h1>Failed Charges</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
+      <th>Customer name</th>
+      <th>Charge amount</th>
+      <th>Date when the charge was disputed</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% @failed_charges.each do |charge| %>
+      <tr class='failed_charges'>
+        <td><%= charge.full_name %></td>
+        <td><%= number_to_currency charge.amount %></td>
+        <td><%= charge.updated_at %></td>
       </tr>
     <% end %>
   </tbody>
