--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Customer name</th>
       <th>Charge amount</th>
-      <th>Date when the charge was disputed</th>
+      <th>Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,7 +17,32 @@
       <tr class='failed_charges'>
         <td><%= charge.full_name %></td>
         <td><%= number_to_currency charge.amount %></td>
-        <td><%= charge.updated_at %></td>
+        <td><%= charge.updated_at.strftime('%F') %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<h1>Disputed Charges</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Customer name</th>
+      <th>Charge amount</th>
+      <th>Date</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @disputed_charges.each do |charge| %>
+      <tr class='disputed_charges'>
+        <td><%= charge.full_name %></td>
+        <td><%= number_to_currency charge.amount %></td>
+        <td><%= charge.updated_at.strftime('%F') %></td>
       </tr>
     <% end %>
   </tbody>
