--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -1,35 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Charges</h1>
+<h1>Failed Charges</h1>
+<%= render 'charge_list', charges: @charges.failed, css_classes: 'failed' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<h1>Disputed Charges</h1>
+<%= render 'charge_list', charges: @charges.disputed, css_classes: 'disputed' %>
 
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.customer %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h1>Successful Charges</h1>
+<%= render 'charge_list', charges: @charges.successful, css_classes: 'successful' %>
 
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
+<%= link_to 'Customers', customers_path, class: 'btn btn-warning' %>
+<%= link_to 'New Charge', new_charge_path, class: 'btn btn-primary' %>
