--- a/app/views/charges/_charge_list.html.erb
+++ b/app/views/charges/_charge_list.html.erb
@@ -2,10 +2,8 @@
   <thead>
   <tr class="header">
     <th>Customer</th>
-    <th>Paid</th>
     <th>Amount</th>
-    <th>Currency</th>
-    <th>Refunded</th>
+    <th>Date</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -14,13 +12,11 @@
   <% charges.each do |charge| %>
     <tr class="customer">
       <td><%= charge.customer.full_name %></td>
-      <td><%= charge.paid %></td>
-      <td><%= charge.amount %></td>
-      <td><%= charge.currency %></td>
-      <td><%= charge.refunded %></td>
-      <td><%= link_to 'Show', charge %></td>
-      <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-      <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= number_to_currency(charge.amount) %></td>
+      <td><%= time_ago_in_words(charge.created_at) %></td>
+      <td><%= link_to 'Show', charge, class: 'btn btn-primary' %></td>
+      <td><%= link_to 'Edit', edit_charge_path(charge), class: 'btn btn-warning' %></td>
+      <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
     </tr>
   <% end %>
   </tbody>
