--- a/source/exampleApp/app/views/transactions/_form.html.erb
+++ b/source/exampleApp/app/views/transactions/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@credit_card) do |f| %>
-  <% if @credit_card.errors.any? %>
+<%= form_for(@transaction) do |f| %>
+  <% if @transaction.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@credit_card.errors.count, "error") %> prohibited this credit_card from being saved:</h2>
+      <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
 
       <ul>
-      <% @credit_card.errors.full_messages.each do |msg| %>
+      <% @transaction.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
