Remove and recreate customers scaffold to not use camelCase for its columns

--- a/source/exampleApp/app/views/customers/_form.html.erb
+++ b/source/exampleApp/app/views/customers/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :firstName %><br>
-    <%= f.text_field :firstName %>
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name %>
   </div>
   <div class="field">
-    <%= f.label :lastName %><br>
-    <%= f.text_field :lastName %>
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
   </div>
   <div class="actions">
     <%= f.submit %>
