--- a/source/exampleApp/app/views/customers/show.html.erb
+++ b/source/exampleApp/app/views/customers/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Firstname:</strong>
-  <%= @customer.firstName %>
+  <strong>First name:</strong>
+  <%= @customer.first_name %>
 </p>
 
 <p>
-  <strong>Lastname:</strong>
-  <%= @customer.lastName %>
+  <strong>Last name:</strong>
+  <%= @customer.last_name %>
 </p>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
