--- a/source/exampleApp/app/views/charges/_form.html.erb
+++ b/source/exampleApp/app/views/charges/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@transaction) do |f| %>
-  <% if @transaction.errors.any? %>
+<%= form_for(@charge) do |f| %>
+  <% if @charge.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
+      <h2><%= pluralize(@charge.errors.count, "error") %> prohibited this charge from being saved:</h2>
 
       <ul>
-      <% @transaction.errors.full_messages.each do |msg| %>
+      <% @charge.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
