--- a/source/exampleApp/app/views/charges/index.html.erb
+++ b/source/exampleApp/app/views/charges/index.html.erb
@@ -1,36 +1,17 @@
-<h1>Listing charges</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Created</th>
-      <th>Paid</th>
-      <th>Amount</th>
-      <th>Currency</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<%# we can extract the titles from the scope to assign them to the titles in the partial %>
 
-  <tbody>
-    <% @charges.each do |charge| %>
-      <tr>
-        <td><%= charge.created %></td>
-        <td><%= charge.paid %></td>
-        <td><%= charge.amount %></td>
-        <td><%= charge.currency %></td>
-        <td><%= charge.refunded %></td>
-        <td><%= charge.customer %></td>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h1>Failed Charges</h1>
+
+<%= render partial: 'charges', locals: {charges: @charges.failed} %>
+
+<h1>Disputed Charges</h1>
+
+<%= render partial: 'charges', locals: {charges: @charges.disputed} %>
+
+<h1>Successful Charges</h1>
+
+<%= render partial: 'charges', locals: {charges: @charges.successful} %>
 
 <br>
 
