--- a/source/example-app/app/views/charges/_not_successful_charge.html.erb
+++ b/source/example-app/app/views/charges/_not_successful_charge.html.erb
@@ -1,11 +1,8 @@
 <tr class="charge-item <%= row_class %>">
-  <td><%= charge.created %></td>
-  <td><%= charge.paid %></td>
-  <td><%= charge.amount %></td>
-  <td><%= charge.currency %></td>
-  <td><%= charge.refunded %></td>
-
   <td><%= "#{charge.customer.first_name} #{charge.customer.last_name}" %>
+  <td><%= "#{charge.amount} #{charge.currency}" %></td>
+  <td><%= charge.created %></td>
+
   <td><%= link_to 'Show', charge %></td>
   <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
   <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
