--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,20 +1,26 @@
 <h1>Failed Charges</h1>
 <ul>
   <% @charges.select(&:failed?).each do |charge| %>
-    <li><%= charge.inspect %></li>
+    <li class='failed-charge'>
+      <%= "#{charge.customer.name} --- #{charge}" %>
+    </li>
   <% end %>
 </ul>
 
 <h1>Disputed Charges</h1>
 <ul>
   <% @charges.select(&:disputed?).each do |charge| %>
-    <li><%= charge.inspect %></li>
+    <li class='disputed-charge'>
+      <%= "#{charge.customer.name} --- #{charge}" %>
+    </li>
   <% end %>
 </ul>
 
 <h1>Successful Charges</h1>
 <ul>
   <% @charges.select(&:successful?).each do |charge| %>
-    <li><%= charge.inspect %></li>
+    <li class='successful-charge'>
+      <%= "#{charge.customer.name} --- #{charge}" %>
+    </li>
   <% end %>
 </ul>
