--- a/app/views/charges/index.html.erb
+++ b/app/views/charges/index.html.erb
@@ -40,7 +40,7 @@
         <tbody style="background-color: #ff0000">
         <tr>
           <th scope="row"><%= charge.id %></th>
-          <td><%= charge.customer.first_name %></td>
+          <td><%= charge.customer_first_name %></td>
           <td><%= charge.amount %></td>
           <td><%= charge.created_at %></td>
         </tr>
@@ -66,7 +66,7 @@
         <tbody style="background-color: #ff5400">
         <tr>
           <th scope="row"><%= charge.id %></th>
-          <td><%= charge.customer.first_name %></td>
+          <td><%= charge.customer_first_name %></td>
           <td><%= charge.amount %></td>
           <td><%= charge.created_at %></td>
         </tr>
