--- a/app/assets/stylesheets/card_charges.scss
+++ b/app/assets/stylesheets/card_charges.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the CardCharges controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.failed-charges {
+  background-color: #FF0000;
+}
+
+.disputed-charges {
+  background-color: #FF5400;
+}
+
+.successful-charges {
+  background-color: #D4FEEE;
+}
