--- a/app/views/card_charges/index.html.erb
+++ b/app/views/card_charges/index.html.erb
@@ -1,33 +1,64 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Card Charges</h1>
-
+<h1>Failed Charges</h1>
 <table>
   <thead>
     <tr>
-      <th>Paid</th>
+      <th>Customer Name</th>
       <th>Amount</th>
-      <th>Refunded</th>
-      <th>Customer</th>
-      <th colspan="3"></th>
+      <th>Date</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @card_charges.each do |card_charge| %>
-      <tr>
-        <td><%= card_charge.paid %></td>
-        <td><%= card_charge.amount %></td>
-        <td><%= card_charge.refunded %></td>
-        <td><%= card_charge.customer_id %></td>
-        <td><%= link_to 'Show', card_charge %></td>
-        <td><%= link_to 'Edit', edit_card_charge_path(card_charge) %></td>
-        <td><%= link_to 'Destroy', card_charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <% @card_charges.where(paid: false).each do |card_charge| %>
+      <tr class="failed-charges">
+        <td><%= "#{card_charge.customer.firstname} #{card_charge.customer.lastname}" %></td>
+        <td><%= humanized_money_with_symbol card_charge.amount_cents/100 %></td>
+        <td><%= card_charge.created_at.to_date %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
+<h1>Disputed Charges</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Amount</th>
+      <th>Date</th>
+    </tr>
+  </thead>
 
-<%= link_to 'New Card Charge', new_card_charge_path %>
+  <tbody>
+    <% @card_charges.where(refunded: true).each do |card_charge| %>
+      <tr class="disputed-charges">
+        <td><%= "#{card_charge.customer.firstname} #{card_charge.customer.lastname}" %></td>
+        <td><%= humanized_money_with_symbol card_charge.amount_cents/100 %></td>
+        <td><%= card_charge.created_at.to_date %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h1>Successful Charges</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Customer Name</th>
+      <th>Amount</th>
+      <th>Date</th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @card_charges.where(paid: true, refunded: false).each do |card_charge| %>
+      <tr class="successful-charges">
+        <td><%= "#{card_charge.customer.firstname} #{card_charge.customer.lastname}" %></td>
+        <td><%= humanized_money_with_symbol card_charge.amount_cents/100 %></td>
+        <td><%= card_charge.created_at.to_date %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
