--- a/source/app/assets/stylesheets/charges.scss
+++ b/source/app/assets/stylesheets/charges.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.failed-charges tr{
+  background-color: #FF0000;
+}
+
+.disputed-charges tr{
+  background-color: #FF5400;
+}
