--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -1,7 +1,42 @@
-<p id="notice"><%= notice %></p>
+<h1>Failed Charges</h1>
+<table class="failed-charges">
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<h1>Charges</h1>
+  <tbody>
+    <% Charge.failed.each do |charge| %>
+      <tr>
+        <td><%= charge.full_name %></td>
+        <td><%= number_to_currency(charge.amount/100) %></td>
+        <td><%= Time.at(charge.created).strftime('%F') %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
+<h1>Disputed Charges</h1>
+<table class="disputed-charges">
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% Charge.disputed.each do |charge| %>
+      <tr>
+        <td><%= charge.full_name %></td>
+        <td><%= number_to_currency(charge.amount/100) %></td>
+        <td><%= Time.at(charge.created).strftime('%F') %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<h1>Successful Charges</h1>
 <table>
   <thead>
     <tr>
@@ -10,16 +45,12 @@
   </thead>
 
   <tbody>
-    <% @charges.each do |charge| %>
+    <% Charge.successful.each do |charge| %>
       <tr>
-        <td><%= link_to 'Show', charge %></td>
-        <td><%= link_to 'Edit', edit_charge_path(charge) %></td>
-        <td><%= link_to 'Destroy', charge, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= charge.full_name %></td>
+        <td><%= number_to_currency(charge.amount/100) %></td>
+        <td><%= Time.at(charge.created).strftime('%F') %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Charge', new_charge_path %>
