--- a/source/app/views/charges/index.html.erb
+++ b/source/app/views/charges/index.html.erb
@@ -37,7 +37,7 @@
 </table>
 
 <h1>Successful Charges</h1>
-<table>
+<table class="successful-charges">
   <thead>
     <tr>
       <th colspan="3"></th>
